// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton passing a value in selectedIndex will select the proper index of the list of items 1`] = `
<ToggleButton
  handleSelect={[MockFunction]}
  items={Array []}
  selectedIndex={2}
>
  <ul
    className="ui-toggle-button"
  >
    <ToggleItem
      active={false}
      handleClick={[Function]}
      key="0/.0"
    >
      <li
        className="ui-toggle-button__item"
        onClick={[Function]}
      >
        First Item
      </li>
    </ToggleItem>
    <ToggleItem
      active={false}
      handleClick={[Function]}
      key="1/.1"
    >
      <li
        className="ui-toggle-button__item"
        onClick={[Function]}
      >
        Second Item
      </li>
    </ToggleItem>
    <ToggleItem
      active={true}
      handleClick={[Function]}
      key="2/.2"
    >
      <li
        className="ui-toggle-button__item ui-toggle-button__item_active"
        onClick={[Function]}
      >
        Third Item
      </li>
    </ToggleItem>
  </ul>
</ToggleButton>
`;

exports[`ToggleButton renders the ToggleButton component using items 1`] = `
<ToggleButton
  handleSelect={[MockFunction]}
  items={
    Array [
      "First item",
      "Second item",
      "Third item",
    ]
  }
  selectedIndex={0}
>
  <ul
    className="ui-toggle-button"
  >
    <ToggleItem
      active={true}
      handleClick={[Function]}
      key="0"
    >
      <li
        className="ui-toggle-button__item ui-toggle-button__item_active"
        onClick={[Function]}
      >
        First item
      </li>
    </ToggleItem>
    <ToggleItem
      active={false}
      handleClick={[Function]}
      key="1"
    >
      <li
        className="ui-toggle-button__item"
        onClick={[Function]}
      >
        Second item
      </li>
    </ToggleItem>
    <ToggleItem
      active={false}
      handleClick={[Function]}
      key="2"
    >
      <li
        className="ui-toggle-button__item"
        onClick={[Function]}
      >
        Third item
      </li>
    </ToggleItem>
  </ul>
</ToggleButton>
`;

exports[`ToggleButton renders the ToggleButton component with the defaults 1`] = `
<ToggleButton
  handleSelect={[MockFunction]}
  items={Array []}
  selectedIndex={0}
>
  <ul
    className="ui-toggle-button"
  >
    <ToggleItem
      active={true}
      handleClick={[Function]}
      key="0/.0"
    >
      <li
        className="ui-toggle-button__item ui-toggle-button__item_active"
        onClick={[Function]}
      >
        First Item
      </li>
    </ToggleItem>
    <ToggleItem
      active={false}
      handleClick={[Function]}
      key="1/.1"
    >
      <li
        className="ui-toggle-button__item"
        onClick={[Function]}
      >
        Second Item
      </li>
    </ToggleItem>
    <ToggleItem
      active={false}
      handleClick={[Function]}
      key="2/.2"
    >
      <li
        className="ui-toggle-button__item"
        onClick={[Function]}
      >
        Third Item
      </li>
    </ToggleItem>
  </ul>
</ToggleButton>
`;
